--- a/index.html
+++ b/index.html
@@ -5,25 +5,39 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sobre mim</title>
+        <link rel="stylesheet" href="reset (1).css">
+        <link rel="stylesheet" href="style.css">
+        <style>
+            body  {
+                background-color: red
+            }
+        </style>
     </head>
     <!--html nao tem pescoço-->
     <body>
+
         <header>
+            <nav>
             <ul>
-                <li><a href="#">Seção mim</a></li>
-                <li><a href="#">Formação acadêmica</a></li>
-                <li><a href="#">Hard skllis</a></li>
-                <li><a href="#">Soft skills</a></li>
-                <li><a href="#">Meus projetos</a></li>
-                <li><a href="#">Meus artigos</a></li>
-                <li><a href="#">Última seção</a></li>
+                <li><a href="#sobreMim">Sobre mim</a></li>
+                <li><a href="#formaxaoAcademina">Formação acadêmica</a></li>
+                <li><a href="#hardAkilss">Hard skllis</a></li>
+                <li><a href="#softSkills">Soft skills</a></li>
+                <li><a href="#meusProjetos">projetos</a></li>
+                <li><a href="#meusArtigos">artigos</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
+            </nav>
         </header>
 
         <section>
             <h1>Sobre mim</h1>
-            <p>Sou aluna do SESI SENAI</p>
-            <img src="bruna.jpg"alt="Foto, mulher,branca, cabelo loiro e liso" width="200" title="Foto, mulher,branca,cabelo loiro e liso"> 
+            <p>Lorem90</p>
+            <img src="bruna.jpg"alt="Foto, mulher,branca, cabelo loiro e liso" width="200" title="Foto, mulher,branca,cabelo loiro e liso">
+            
+            section>h2>{Nova seção})+p*2>lorem20
+
+            <header>nav>ul>li*10>a>{link$}
             <ul>
                 <li>
                     <a href="https://github.com/luiseBru" title="Clique para acessar meu porfólio no Github"
@@ -53,6 +67,7 @@
 
         <section>
             <h2>meus artigos</h2>
+            
         </section>
 
         <footer>
