--- a/index.html
+++ b/index.html
@@ -8,36 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <style>
-        body {
-            background-color: #471919af;
-            font-family: Arial, sans-serif;
-        }
-
-        /* Remove sublinhado dos links */
-        a {
-            text-decoration: none;
-            color: #000; /* você pode mudar a cor se quiser */
-        }
-
-        a:hover {
-            text-decoration: underline; /* efeito ao passar o mouse, opcional */
-        }
-
-        /* Remove os marcadores das listas */
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        /* Só um detalhe pra deixar o menu com mais espaçamento (opcional) */
-        nav ul li {
-            display: inline-block;
-            margin-right: 15px;
-        }
-
-        img {
-            margin-top: 10px;
-        }
+        
     </style>
 </head>
 
@@ -60,7 +31,7 @@
     <section id="sobreMim">
         <div class="place">
          <h1>Sobre mim</h1>
-            <p>Olá, sou estudante</p>
+            <p>Olá, sou estudante do SESI integrado com o SENAI DSI</p>
             <img src="bruna.jpg" alt="Foto de mulher branca com cabelo loiro e liso" width="200" title="Foto de mulher branca com cabelo loiro e liso">
 
             <ul>
@@ -116,7 +87,7 @@
     <section id="contato">
         <div class="place">
 
-            <h2>Contato</h2>
+            <h2>Entre em contato</h2>
         </div>
     </section>
 
