--- a/emmet_desafio1.html
+++ b/emmet_desafio1.html
@@ -8,17 +8,7 @@
 <body>
     <header>
        
-        <div>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#secao1">Seção 1</a></li>
-                    <li><a href="secao2">Seção 2</a></li>
-                    <li><a href="secao3">Seção 3</a></li>
-                    <li><a href="secao4">Seção 4</a></li>
-                    <li><a href="secao">Seção 5</a></li>
-                </ul>
-            </nav>
-        </div>
+        #page>nav.logo+ul#navigation>li*5>a{Item $}
     </header>
 </body>
 </html>
