--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
 
     <section id="meusProjetos">
         <div class="place">
+
             <h2>Meus projetos</h2>
             <ul>
-                <li><a href="https://luisebru.github.io/meu-projeto-exemplo" target="_blank">Meu Projeto Exemplo</a></li>
+                <a href="https://github.com/luiseBru/lopal-moonlander.git" target="_blank">Jogo de Alunissagem</a>
             </ul>
         </div>
     </section>
