solução do desafio

--- a/emmet_desafio1.html
+++ b/emmet_desafio1.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <header>
+       header>nav.navbar>ul>li*5>a[href="#secao$"]>{Seção $}
        
-        #page>nav.logo+ul#navigation>li*5>a{Item $}
 
     </header>
 </body>
