--- a/emmet_desafio2.html
+++ b/emmet_desafio2.html
@@ -34,7 +34,11 @@
         <p></p>
         <p></p>
     </footer>
-    #page>div.logo+ul#navigation>li*5>a{Item $}+div>p*2{Lorem ipsum dolor sit amet.}^div+img[src="" alt="" height="50" width=""]
+
+    (header>nav>ul>li*5>a{link $})(+main>section>(div>p*2>lorem5)+div+img[width="50"][height="50"])+footer>p*2
+    
+
+
 
 
 </body>
