--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
@@ -22,6 +21,8 @@
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
+
+        <button id="toggle-contraste">Alto Contraste</button>
     </header>
 
     <section id="sobreMim">
@@ -36,110 +37,99 @@
         </div>
     </section>
 
+
     <section id="formacaoAcademica">
         <div class="place">
-            <h2>Formação acadêmica</h2>
+            <h2>Formação Academica</h2>
             <ul class="card">
                 <li class="titulo-card">Técnico em Desenvolvimento de Sistemas</li>
                 <li class="instituicao-card">SENAI "Conde José Vicente de Azevedo"</li>
-                <li class="ano-card">2026 (previsto)</li>
+                <li class="ano-card">2026(previsto)</li>
             </ul>
         </div>
     </section>
 
     <section id="hardSkills">
         <div class="place">
-            <h2>Hard skills</h2>
+            <h2>Hard Skills</h2>
             <div class="cards-em-linha">
                 <ul class="card">
                     <li class="icone-card">🐍</li>
                     <li class="titulo-card">Python</li>
-                    <li class="descricao-card">Full stack, Flask, FastAPI</li>
+                    <li class="descrição-card">Full stack, Flask, FastAPI</li>
                 </ul>
-                <ul class="card">
+                <div class="cards-em-linha">
+                    <ul class="card">
                     <li class="icone-card">🌐</li>
                     <li class="titulo-card">Desenvolvimento Web</li>
-                    <li class="descricao-card">Front-end, HTML, CSS, JavaScript</li>
+                    <li class="descrição-card">Front-end, HTML, CSS, JavaScript</li>
                 </ul>
                 <ul class="card">
                     <li class="icone-card">📲</li>
                     <li class="titulo-card">Desenvolvimento Mobile</li>
-                    <li class="descricao-card">Kotlin, Android Studio, Jetpack Compose</li>
+                    <li class="descrição-card">Kotlin, Android Studio, Jetpack Compose</li>
                 </ul>
                 <ul class="card">
                     <li class="icone-card">🎲</li>
-                    <li class="titulo-card">Análise de Dados</li>
-                    <li class="descricao-card">MySQL, Power BI</li>
+                    <li class="titulo-card">Analize de Dados</li>
+                    <li class="descrição-card">MySQL, Power BI</li>
                 </ul>
                 <ul class="card">
                     <li class="icone-card">🧪</li>
                     <li class="titulo-card">Teste de Software</li>
-                    <li class="descricao-card">JUnit, Cypress</li>
+                    <li class="descrição-card">JUnit, Cypress</li>
                 </ul>
-            </div>
         </div>
     </section>
 
     <section id="softSkills">
         <div class="place">
-            <h2>Soft skills</h2>
-            <div class="cards-em-linha">
-                <ul class="card">
-                    <li class="icone-card">🤝</li>
-                    <li class="titulo-card">Trabalho em equipe</li>
-                </ul>
-                <ul class="card">
-                    <li class="icone-card">🧠</li>
-                    <li class="titulo-card">Pensamento crítico</li>
-                </ul>
-                <ul class="card">
-                    <li class="icone-card">🤔</li>
-                    <li class="titulo-card">Resolução de problemas</li>
-                </ul>
-                <ul class="card">
-                    <li class="icone-card">🐙</li>
-                    <li class="titulo-card">Adaptabilidade</li>
-                </ul>
-                <ul class="card">
-                    <li class="icone-card">📚</li>
-                    <li class="titulo-card">Aprendizado contínuo</li>
-                </ul>
-                <ul class="card">
-                    <li class="icone-card">⏱️</li>
-                    <li class="titulo-card">Autogestão</li>
-                </ul>
-            </div>
-        </div>
+            <h2>Soft Skills</h2>
+            <ul class="card">
+                <li class="icone-card">🤝</li>
+                <li class="titulo-card">Trabalho em equipe</li>
+            </ul>
+            <ul class="card">
+                <li class="icone-card">🧠</li>
+                <li class="titulo-card">Pensamento crítico</li>
+            </ul>
+
+            <ul class="card">
+                <li class="icone-card">🤔</li>
+                <li class="titulo-card">Resolução de problemas </li>
+            </ul>
+
+            <ul class="card">
+                <li class="icone-card">🐙</li>
+                <li class="titulo-card">Adaptabilidade</li>
+            </ul>
+
+            <ul class="card">
+                <li class="icone-card">📚</li>
+                <li class="titulo-card">Aprendizado contínuo</li>
+            </ul>
+
+            <ul class="card">
+                <li class="icone-card">⏱️</li>
+                <li class="titulo-card">Autogestão</li>
+            </ul>
+        </div>    
     </section>
 
     <section id="meusProjetos">
         <div class="place">
-
-            <h2>Meus projetos</h2>
-            <ul>
-                <a href="https://github.com/luiseBru/lopal-moonlander.git" target="_blank">Jogo de Alunissagem</a>
-            </ul>
+            <h2>Meus Projetos</h2>
+            <p>bbbbbbbb</p>
         </div>
     </section>
 
     <section id="meusArtigos">
         <div class="place">
-            <h2>Meus artigos</h2>
-            <p>Em breve!</p>
+
         </div>
     </section>
 
-    <section id="contato">
-        <div class="place">
-            <h2>Entre em contato</h2>
-            <form>
-                <input type="text" name="nome" placeholder="Seu nome">
-                <input type="email" name="email" placeholder="Seu e-mail">
-                <textarea name="mensagem" rows="5" cols="50" placeholder="Digite sua mensagem"></textarea>
-                <input type="submit" value="Solicitar contato">
-            </form>
-        </div>
-    </section>
+    <section id="contato">..mkk.</section>
 
     <footer>
         <div class="place">
@@ -152,6 +142,13 @@
             <p>Desenvolvido por <a href="#sobreMim">Bruna Luise</a></p>
         </div>
     </footer>
+    <script>
+        document.getElementById('toggle-contraste').addEventListener('click', function () {
+            document.body.classList.toggle('alto-contraste');
+        });
+    </script>
 
 </body>
-</html>
+</html>  
+
+
